April 2017 initial changes

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -21,127 +21,132 @@
     <!-- Custom styles for this template -->
     <link href="css/dentistkaarstyle.css" rel="stylesheet">
   </head>
-  <body>
-      <div class="container header">
-		<div class="row">
-			<div id="header-logo" class="col-md-3">
-				<img src="images/logo.png" />
-			</div>
-			<div id="header-title" class="col-md-6 text-center">
-				<h1>The Dental Surgery</h1>
-				<h3>Western Road, Clonmel</h3>
-			</div>
-			<div id="header-address" class="col-md-3 text-right">
-				The Dental Surgery<br />
-				Western Road<br />
-				Clonmel<br />
-				Co. Tipperary<br />
-				<b>Tel: 052-6121784</b>
-			</div>
-		</div>
-        <div class="navbar navbar-default" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>				
-              </button>
-			  <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home home-icon"></span></a>
+<body>
+    <div class="container header">
+        <div class="row">
+            <div id="header-logo" class="col-md-3">
+                <img src="images/logo.png" />
             </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About</a></li>
-                <li><a href="feeguide.html">Fee Guide</a></li>
-                <li><a href="privatefees.html">Private Fees</a></li>
-                <li><a href="gms.html">GMS Medical Cards</a></li>
-                <li><a href="findus.html">How To Find Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="faq.html">F.A.Q.</a></li>
-              </ul>
+            <div id="header-title" class="col-md-6 text-center">
+                <h1>The Dental Surgery</h1>
+                <h3>Western Road, Clonmel</h3>
             </div>
-          </div>
+            <div id="header-address" class="col-md-3 text-right">
+                The Dental Surgery<br />
+                Western Road<br />
+                Clonmel<br />
+                Co. Tipperary<br />
+                <b>Tel: 052-6121784</b>
+            </div>
         </div>
-      </div>
-	<div class="container main-container">
-		<h1 class="main-heading">About Us</h1><br />
-		<div class="panel panel-primary">
-		  <div class="panel-heading"><b>Gerry Kaar</b> qualified in 1979 in UCC.</div>
-		  <div class="panel-body">
-			After working in London and the UK, he returned to Clonmel in 1989 to take over The Dental Surgery.
-			He has recently been awarded the Certificate in Implant Dentistry from Warwick University.
-			During the time spent in Clonmel, he has completed the diploma in Clinical Dentistry in UCD, and has
-			also obtained a law degree (LLB, University of London).
-		  </div>
-		</div>
-		<div class="panel panel-default">
-		  <div class="panel-heading"><b>D. Kaar</b> qualified as a dental surgery assistant in Cork University Dental Hospital.</div>
-		  <div class="panel-body">
-			She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as a dental
-			hygienist in general practice in the UK.
-			Since then she has worked at the surgery in Clonmel with Gerry on a part-time basis, while at the same time balancing
-			time at home raising her family.
-			She has also obtained a degree in Business Studies from Tipperary Institute, and has used this experience
-			to help with the management of the practice.
-		  </div>
-		</div>
-		<div class="panel panel-default">
-		  <div class="panel-heading"><b>Eileen O'Brien</b>, the practice receptionist has been with the practice for 30 years!</div>
-		  <div class="panel-body">
-			She has worked alongside three Principals during this time. Eileen is experienced in all aspects of practice
-			management and patient care; and is well known by all the regular patients. Eileen is friendly and outgoing and 
-			always strives to put patients at ease.
-		  </div>
-		</div>
-		<div class="panel panel-default">
-		  <div class="panel-heading"><b>Agnieszka Ormanowska</b></div>
-		  <div class="panel-body">
-			Agnieszka Ormanowska, is our qualified dental nurse and is a most valued member of staff.
-			Agnieszka has been with the practice for over six years. She is extremely capable and competent and does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring nature will ensure you will feel at ease throughout your visit.
-		  </div>
-		</div>
-		<div class="panel panel-default">
-		  <div class="panel-heading"><b>Claire Coleman</b>, Clinical Dental Technician</div>
-		  <div class="panel-body">
-			Claire is a registered dental care professional who is trained and qualified to provide a range of denture services directly to patients and services that were previously only available through your dentist.<br /><br />
-			Claire graduated with a degree in Dental Technology in 1998 from Manchester Metropolitan University. After two years working in the Manchester Dental Hospital she moved to Ireland to join her family run dental laboratory in Waterford. During this time she returned to college to gain a Post Graduate Diploma in Clinical Dental Technology at the Dublin Dental Hospital. Claire now specialises in dentures; seeing the patient through from treatment planning to fitting the denture and offering a personalised service.
-		  </div>
-		</div>
-	</div>
-	<footer class="container">
-		<p class="pull-right text-right">
-			<a href="#">Back to top</a>
-			<br />
-			&copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
-		</p>        
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
-		</a>
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idatext.gif" width="200" height="40" title="IDA text" />
-		</a>
-		<a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
-			<img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
-		</a>
-	</footer>
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home home-icon"></span></a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="about.html">About</a></li>
+                        <li><a href="feeguide.html">Fee Guide</a></li>
+                        <li><a href="privatefees.html">Private Fees</a></li>
+                        <li><a href="gms.html">GMS Medical Cards</a></li>
+                        <li><a href="findus.html">How To Find Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="faq.html">F.A.Q.</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container main-container">
+        <h1 class="main-heading">About Us</h1><br />
+        <div class="panel panel-primary">
+            <div class="panel-heading"><b>Gerry Kaar</b> Principal Dental Surgeon</div>
+            <div class="panel-body">
+                <p>Qualified in 1979 in UCC.</p>
+                After working in London and the UK, he returned to Clonmel in 1989 to take over The Dental Surgery.
+                He has recently been awarded the Certificate in Implant Dentistry from Warwick University.
+                During the time spent in Clonmel, he has completed the diploma in Clinical Dentistry in UCD, and has
+                also obtained a law degree (LLB, University of London).
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>D. Kaar</b> Dental Hygienist and Practice Manager</div>
+            <div class="panel-body">
+                <p>Qualified as a dental surgery assistant in Cork University Dental Hospital.</p>
+                She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as a dental
+                hygienist in general practice in the UK.
+                Since then she has worked at the surgery in Clonmel with Gerry on a part-time basis, while at the same time balancing
+                time at home raising her family.
+                She has also obtained a degree in Business Studies from Tipperary Institute, and has used this experience
+                to help with the management of the practice.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>Eileen O'Brien</b> Dental Receptionist</div>
+            <div class="panel-body">
+                <p>The practice receptionist has been with the practice for 30 years!</p>
+                She has worked alongside three Principals during this time. Eileen is experienced in all aspects of practice
+                management and patient care; and is well known by all the regular patients. Eileen is friendly and outgoing and
+                always strives to put patients at ease.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant. Has worked at the surgery for 9 years</div>
+            <div class="panel-body">                
+                Agnieszka Ormanowska, is our qualified dental nurse and is a most valued member of staff.
+                Agnieszka has been with the practice for over six years. She is extremely capable and competent and does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring nature will ensure you will feel at ease throughout your visit.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>Claire Coleman</b>, Clinical Dental Technician</div>
+            <div class="panel-body">
+                Claire is a registered dental care professional who is trained and qualified to provide a range of denture services directly to patients and services that were previously only available through your dentist.<br /><br />
+                Claire graduated with a degree in Dental Technology in 1998 from Manchester Metropolitan University. After two years working in the Manchester Dental Hospital she moved to Ireland to join her family run dental laboratory in Waterford. During this time she returned to college to gain a Post Graduate Diploma in Clinical Dental Technology at the Dublin Dental Hospital. Claire now specialises in dentures; seeing the patient through from treatment planning to fitting the denture and offering a personalised service.
+            </div>
+        </div>
+    </div>
+    <footer class="container">
+        <p class="pull-right text-right">
+            <a href="#">Back to top</a>
+            <br />
+            &copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
+        </p>
+        <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
+            <img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
+        </a>
+        <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
+            <img src="images/idatext.gif" width="200" height="40" title="IDA text" />
+        </a>
+        <a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
+            <img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
+        </a>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-	$(function() {
-		$(".this-year").html(new Date().getFullYear());
-	});
-	</script>
-	<script type="text/javascript">
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script type="text/javascript">
+        $(function () {
+            $(".this-year").html(new Date().getFullYear());
+        });
+    </script>
+    <script type="text/javascript">
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-	  ga('create', 'UA-18019923-1', 'auto');
-	  ga('send', 'pageview');
+        ga('create', 'UA-18019923-1', 'auto');
+        ga('send', 'pageview');
 
-	</script>
-  </body>
+    </script>
+</body>
 </html>
