--- a/feeguide.html
+++ b/feeguide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -69,6 +69,10 @@
 		<h1 class="main-heading">PRSI Dental Treatment Fees</h1>
 		<div class="container">
 			<div class="col-lg-11">
+                <h3>
+                    *2017 Update. As announced in Budget 2017 last October, the Treatment Benefit scheme is being extended to cover self-employed
+                    PRSI contributors <u>and their dependent spouses</u> for the first time.
+                </h3>
 				<h3>Following the Government's recent budget, the PRSI scheme has been scrapped.<br />
 				These changes come into effect from the 1st January 2010.</h3>
 				<br />
