--- a/oralcancerawareness.html
+++ b/oralcancerawareness.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -66,11 +66,11 @@
         </div>
       </div>
 	<div class="container main-container">
-		<h1 class="main-heading">Mouth Cancer Awareness Day - 21<sup>st</sup> September 2016</h1>
+		<h1 class="main-heading">Mouth Cancer Awareness Day September 2017</h1>
 		<div class="container">
 			<div class="col-lg-6">
 				<br /><br /><br />
-				<h3>We are participating in the <a href="http://mouthcancerawareness.ie/" target="_blank">Mouth Cancer Awareness Day</a> on Wednesday 21<sup>st</sup> September 2016.
+				<h3>We are participating in the <a href="http://mouthcancerawareness.ie/" target="_blank">Mouth Cancer Awareness Day in September 2017.
 				<br /><br /><br />
 				Contact the surgery to organise an appointment. Times available on the day between the hours of 10.00 to 11.00am. and 3.00 to 4.00 pm.
 				<br /><br /><br />
