--- a/privatefees.html
+++ b/privatefees.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -100,7 +100,7 @@
 			  <tbody>
 				<!-- ***** Hygienist 1 ***** -->
 				<tr>
-					<td rowspan="6" valign="top">Hygienist <span class="asterisk">*</span> (Fees per visit)</td>
+					<td rowspan="7" valign="top">Hygienist <span class="asterisk">*</span> (Fees per visit)</td>
 					<td>Scale + Polish </td>
 					<td>&euro;40.00</td>
 				</tr>
@@ -124,6 +124,10 @@
 					<td>Recall scale and polish per visit (if a second or more visit is required in the same course of treatment) </td>
 					<td>&euro;30.00</td>
 				</tr>
+            <tr>
+                <td>Root scaling</td>
+                <td>&euro;60.00</td>
+            </tr>
 				<!-- ***** Hygienist 2 ***** -->
 				<tr>
 					<td rowspan="6" valign="top">Examination <span class="asterisk">**</span></td>
@@ -140,7 +144,7 @@
 				</tr>
 				<tr>
 					<td>2 bitewing x-rays </td>
-					<td>&euro;20.00 </td>
+					<td>&euro;30.00 </td>
 				</tr>
 				<tr>
 					<td>Consultation with dressing </td>
@@ -180,7 +184,7 @@
 				</tr>
 				<tr>
 					<td>"White" Front filling </td>
-					<td>&euro;80.00 </td>
+					<td>&euro;90.00 </td>
 				</tr>
 				<tr>
 					<td>Tip replacement/Cap </td>
@@ -201,8 +205,8 @@
 					<td>&euro;200.00</td>
 				</tr>
 				<tr>
-					<td>Gum Shield </td>
-					<td>&euro;60.00 </td>
+					<td>Gum shield /sports guard</td>
+					<td>&euro;70.00 </td>
 				</tr>
 				<!-- ***** RCT  ***** -->
 				<tr>
@@ -240,11 +244,11 @@
 				</tr>
 				<tr>
 					<td>Metal Cobalt/Chrome Dentures </td>
-					<td>&euro;750.00 </td>
+					<td>&euro;850.00 </td>
 				</tr>
 				<tr>
 					<td>Temporary Denture </td>
-					<td>min &euro;150.00 </td>
+					<td>min &euro;200.00 </td>
 				</tr>
 				<!-- ***** Tooth Whitening ***** -->
 				<tr>
