--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -80,8 +80,8 @@
 		<img src="images/practice.png" alt="Dental Pracice">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Mouth Cancer Awareness Day 2016</h1>
-			  <p>We are participating in the Mouth Cancer Awareness Day on 21<sup>st</sup> September 2016.</p>
+              <h1>Mouth Cancer Awareness Day 2017</h1>
+			  <p>We are participating in the Mouth Cancer Awareness Day in September 2017.</p>
               <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out More</a></p>
             </div>
           </div>
