--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
     <meta name="author" content="The Dental Surgery">
     <title>Gerry Kaar - Dental Surgeon and Associates | Home</title>
+    <link rel="icon" type="image/favicon" href="images/favicon.ico" />
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
