--- a/oralcancerawareness.html
+++ b/oralcancerawareness.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
     <meta name="author" content="The Dental Surgery">
-
     <title>Gerry Kaar - Dental Surgeon and Associates | Oral Cancer Awareness Day</title>
-
+		<link rel="icon" type="image/favicon" href="images/favicon.ico" />
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
