Add notification pop up to site

--- a/index.html
+++ b/index.html
@@ -161,8 +161,25 @@
             </a>
         </footer>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="NotificationModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">Welcome to the Western Dental</h3>
+                </div>
+                <div class="modal-body">
+                    <p>Please be advised that this is a private dental surgery.</p>
+                    <p>The public HSE <strong>Clonmel Community Care Centre</strong> can be found in the grounds of the South Tipperary General Hospital.</p>
+                    <p>(The single storey building to the right, as you enter the grounds.)</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/cookie.js"></script>
     <script type="text/javascript">
         $(function () {
             //highlight today in opening hours
@@ -190,6 +207,12 @@
 
             $("#celebrating").html(yearsOpen + suffix);
             $(".this-year").html(new Date().getFullYear());
+
+            // show the notification pop-up if this is the first time on the website.
+            if(typeof Cookies.get('notification') == 'undefined') {
+                $("#NotificationModal").modal();                
+                Cookies.set('notification', 1, { expires: 365 });
+            }            
         });
     </script>
     <script type="text/javascript">
@@ -202,7 +225,6 @@
 
         ga('create', 'UA-18019923-1', 'auto');
         ga('send', 'pageview');
-
     </script>
 </body>
 </html>
