Update notification text

--- a/index.html
+++ b/index.html
@@ -167,12 +167,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h3 class="modal-title">Welcome to the Western Dental</h3>
+                <h3 class="modal-title">Welcome to Western Dental</h3>
                 </div>
                 <div class="modal-body">
                     <p>Please be advised that this is a private dental surgery.</p>
-                    <p>The public HSE <strong>Clonmel Community Care Centre</strong> can be found in the grounds of the South Tipperary General Hospital.</p>
-                    <p>(The single storey building to the right, as you enter the grounds.)</p>
+                    <p>The public HSE dental clinic can be found at <strong>Clonmel Community Care Centre</strong><br />in the grounds of the South Tipperary General Hospital.</p>
                 </div>
             </div>
         </div>
