Add emergency care message from IDA

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
             <div class="item active">
@@ -117,6 +118,26 @@
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
         <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
+    <div class="container">
+        <div class="col-lg-8 col-lg-offset-2">
+            <img class="text-center" src="images/ida-banner.jpg" width="800px" height="200px" title="Irish Dental Association Banner" />
+            <h2 class="text-center" style="color: #f00">NOTICE FOR MEMBERS OF THE PUBLIC SEEKING DENTAL CARE/TREATMENT</h2>
+            <div style="font-size: 1.2em">
+                <p>In the event that your own Dental Practice is closed for routine treatment and only seeing Emergencies, 
+                    please call or email your practice in the first instance if you need urgent dental care.</p>
+                <p>Please check the dental surgery website for details also.</p>
+                <p>The majority of dental practices if they are only open to emergencies will call you back and will in the
+                    first instance talk to you over the phone to ascertain the problem.  Dental practices are anxious to adhere
+                    to social distancing guidelines as much as possible.</p>
+                <p>Please DO NOT PRESENT to either a Dental Hospital or indeed a General Hospital without first having spoken 
+                    to your local general dentist.</p>
+                <p>Please be assured the health and safety of patients, their dental teams and themselves is paramount and therefore 
+                    many dentists are now offering emergency advice and restricted emergency care.</p>
+                <p>Thank you for your co-operation.</p>
+            </div>
+        </div>
+    </div>
+    <hr />
     <div class="container marketing">
         <div class="row">
             <div class="col-lg-4">
