Resize IDA banner

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div><!-- /.carousel -->
     <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
-            <img class="text-center" src="images/ida-banner.jpg" width="800px" height="200px" title="Irish Dental Association Banner" />
+            <img class="text-center" src="images/ida-banner.jpg" width="100%" title="Irish Dental Association Banner" />
             <h2 class="text-center" style="color: #f00">NOTICE FOR MEMBERS OF THE PUBLIC SEEKING DENTAL CARE/TREATMENT</h2>
             <div style="font-size: 1.2em">
                 <p>In the event that your own Dental Practice is closed for routine treatment and only seeing Emergencies, 
