Update Covid-19 status for June 2020

--- a/index.html
+++ b/index.html
@@ -119,22 +119,40 @@
         <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
     <div class="container">
-        <div class="col-lg-8 col-lg-offset-2">
-            <img class="text-center" src="images/ida-banner.jpg" width="100%" title="Irish Dental Association Banner" />
-            <h2 class="text-center" style="color: #f00">NOTICE FOR MEMBERS OF THE PUBLIC SEEKING DENTAL CARE/TREATMENT</h2>
-            <div style="font-size: 1.2em">
-                <p>In the event that your own Dental Practice is closed for routine treatment and only seeing Emergencies, 
-                    please call or email your practice in the first instance if you need urgent dental care.</p>
-                <p>Please check the dental surgery website for details also.</p>
-                <p>The majority of dental practices if they are only open to emergencies will call you back and will in the
-                    first instance talk to you over the phone to ascertain the problem.  Dental practices are anxious to adhere
-                    to social distancing guidelines as much as possible.</p>
-                <p>Please DO NOT PRESENT to either a Dental Hospital or indeed a General Hospital without first having spoken 
-                    to your local general dentist.</p>
-                <p>Please be assured the health and safety of patients, their dental teams and themselves is paramount and therefore 
-                    many dentists are now offering emergency advice and restricted emergency care.</p>
-                <p>Thank you for your co-operation.</p>
-            </div>
+        <div class="col-lg-8 col-lg-offset-2 text-justify">
+            <h2 class="text-center">Covid-19 Update June 2020</h2>
+            <p>I hope you and your families are keeping well and safe during these uncertain times.</p>
+            <p>Following the advice from The Dental Council and The Irish Dental Association I
+                would like to inform you that since March I have provided emergency dental
+                care and have also been providing support and advice for all patients via
+                telephone. The government roadmap to reopening businesses in collaboration
+                with the dental advisory groups has recently outlined a change in the
+                treatment we can now undertake. Dental Surgeons can now provide routine
+                dental treatment and I am currently focused on working through a backlog of
+                restoration work and providing an environment that mitigates infection risk.</p>
+            <p>I want to make sure your visit to the surgery is a comfortable and pleasant
+                experience, and your satisfaction and well-being is of utmost importance to
+                me. Drills and other high-speed tools create a lot of ‘spray’ from patients’
+                mouths so dentists now need to use protective clothing and equipment.
+                Without this equipment, dentists, hygienists and nurses are not safe to treat
+                patients as normal.</p>
+            <p>Our dedicated team are on hand to provide you with all the support and
+                guidance we possibly can. Your care remains our top priority and we look
+                forward to seeing you back in practice as soon as we can.</p>
+            <p>Best wishes,</p>
+            <p>Gerry Kaar</p>
+        </div>
+        <div class="col-lg-8 col-lg-offset-2 text-justify">
+            <h2 class="text-center">We are thinking about your safety</h2>
+            <p>We are reducing the number of our daily appointments to restrict patient
+                numbers on the premises. Please come on time but not too early. Ring the
+                surgery on 0526121784 and if the phone is unanswered please leave a
+                message to say you are waiting outside the surgery.</p>
+            <p>We are operating a low contact level for all our patients. The surgery as always
+                will be disinfected between patients and ventilated.</p>
+            <p>Please advise us about any change in medication before you attend and we will
+                ask you to fill in any forms required before you attend your appointment.</p>
+            <p>We have made changes at the surgery to focus on mitigating infection risks.</p>
         </div>
     </div>
     <hr />
