Update oral cancer awareness dates

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Mouth Cancer Awareness Day 2017</h1>
-                        <p>We are participating in the Mouth Cancer Awareness Day in September 2017.</p>
+                        <h1>Mouth Cancer Awareness Day</h1>
+                        <p>We are participating in the Mouth Cancer Awareness Day in September.</p>
                         <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out More</a></p>
                     </div>
                 </div>
