--- a/oralcancerawareness.html
+++ b/oralcancerawareness.html
@@ -45,7 +45,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>				
+                <span class="icon-bar"></span>
               </button>
 			  <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home home-icon"></span></a>
             </div>
@@ -65,18 +65,20 @@
         </div>
       </div>
 	<div class="container main-container">
-		<h1 class="main-heading">Mouth Cancer Awareness Day September 2017</h1>
+		<h1 class="main-heading">Mouth Cancer Awareness Day</h1>
 		<div class="container">
 			<div class="col-lg-6">
-				<br /><br /><br />
-				<h3>We are participating in the <a href="http://mouthcancerawareness.ie/" target="_blank">Mouth Cancer Awareness Day in September 2017.
-				<br /><br /><br />
-				Contact the surgery to organise an appointment. Times available on the day between the hours of 10.00 to 11.00am. and 3.00 to 4.00 pm.
-				<br /><br /><br />
-				This is a <u>free</u> service for all patients for an oral screening on that day <u>only</u>.</h3>
+				<br /><br />
+				<h3>We are participating in the <a href="http://mouthcancerawareness.ie/" target="_blank">Mouth Cancer Awareness Day.</a></h3>
+				<br /><br />
+				<h3><a href="http://mouthcancerawareness.ie/" target="_blank">Contact the surgery to organise an appointment. 
+				Times available on the day between the hours of 10.00 to 11.00am. and 3.00 to 4.00 pm.</a></h3>
+				<br /><br />
+				<h3><a href="http://mouthcancerawareness.ie/" target="_blank">This is a <u>free</u> service for all patients for an oral 
+					screening on that day <u>only</u>.</h3>
 			</div>
 			<div class="col-lg-6">
-				<img src="images/oralcancerawareness.jpg" width="480" height="472" />	  
+				<img src="images/oralcancerawareness.jpg" width="480" height="472" />
 			</div>
 		</div>
 	</div>
