Update denture hours

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="container">
                     <div class="carousel-caption">                        
                         <h1>New! Clinical Denture Service</h1>
-                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday from 2-4 pm</p>
+                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday from 10am - 1pm</p>
                         <br /><br />
                     </div>
                 </div>
