Remove year from IDA membership

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
                     <div class="carousel-caption">
-                        <img src="images/ida-logo-2017.png" width="150" height="150" title="Irish Dental Association Member 2017" />
+                        <img src="images/ida-logo-2017.png" width="150" height="150" title="Irish Dental Association Member" />
                         <br /><br />
-                        <p>Irish Dental Association Member 2017</p>                        
+                        <p>Irish Dental Association Member</p>                        
                     </div>                    
                 </div>
             </div>
