Update private fees

--- a/privatefees.html
+++ b/privatefees.html
@@ -97,66 +97,50 @@
 				</tr>
 			  <thead>
 			  <tbody>
-				<!-- ***** Hygienist 1 ***** -->
+				<!-- ***** Hygienist ***** -->
 				<tr>
-					<td rowspan="7" valign="top">Hygienist <span class="asterisk">*</span> (Fees per visit)</td>
+					<td rowspan="3" valign="top">Hygienist <span class="asterisk">*</span> (Fees per visit)</td>
 					<td>Scale + Polish </td>
-					<td>&euro;40.00</td>
+					<td>&euro;50.00</td>
 				</tr>
 				<tr>
-					<td>Local anaesthetic for hygiene work + scaling each quadrant </td>
-					<td>&euro;60.00 </td>
-				</tr>
-				<tr>
-					<td>Root cleaning </td>
-					<td>&euro;40.00</td>
-				</tr>
-				<tr>
-					<td>Polishing/trimming of fillings </td>
+					<td>Recall scale and polish per visit (if a second or more visit is required in the same course of treatment)</td>
 					<td>&euro;30.00</td>
 				</tr>
 				<tr>
-					<td>Fissure sealing per tooth </td>
-					<td>&euro;20.00</td>
-				</tr>
-				<tr>
-					<td>Recall scale and polish per visit (if a second or more visit is required in the same course of treatment) </td>
-					<td>&euro;30.00</td>
-				</tr>
-            <tr>
-                <td>Root scaling</td>
-                <td>&euro;60.00</td>
-            </tr>
-				<!-- ***** Hygienist 2 ***** -->
-				<tr>
-					<td rowspan="6" valign="top">Examination <span class="asterisk">**</span></td>
-					<td>EXAM with SCALE and POLISH </td>
+					<td>Root scaling</td>
 					<td>&euro;60.00</td>
 				</tr>
+				<!-- ***** Examination ***** -->
 				<tr>
-					<td>Consultation/Examination </td>
-					<td>&euro;40.00 </td>
+					<td rowspan="6" valign="top">Examination <span class="asterisk">**</span></td>
+					<td>EXAM with SCALE and POLISH</td>
+					<td>&euro;80.00</td>
 				</tr>
 				<tr>
-					<td>Consultation + Referral letter </td>
+					<td>Consultation/Examination</td>
+					<td>&euro;50.00 </td>
+				</tr>
+				<tr>
+					<td>Consultation + Referral letter</td>
 					<td>&euro;60.00 </td>
 				</tr>
 				<tr>
-					<td>2 bitewing x-rays </td>
+					<td>2 bitewing x-rays</td>
 					<td>&euro;30.00 </td>
 				</tr>
 				<tr>
-					<td>Consultation with dressing </td>
-					<td>&euro;60.00 </td>
+					<td>Consultation with dressing</td>
+					<td>&euro;70.00 </td>
 				</tr>
 				<tr>
-					<td>Consultation with dressing and local anaesthesia </td>
+					<td>Consultation with dressing and local anaesthesia</td>
 					<td>&euro;80.00 </td>
 				</tr>
 				<!-- ***** Extractions ***** -->
 				<tr>
 					<td rowspan="4" valign="top">Extractions</td>
-					<td>Extraction - as part of total treatment plan </td>
+					<td>Extraction - as part of total treatment plan</td>
 					<td>&euro;80.00</td>
 				</tr>
 				<tr>
@@ -164,11 +148,11 @@
 					<td>&euro;100.00 </td>
 				</tr>
 				<tr>
-					<td>Surgical extraction in case of complicated extraction. </td>
+					<td>Surgical extraction in case of complicated extraction.</td>
 					<td>&euro;120.00 </td>
 				</tr>
 				<tr>
-					<td>Surgical extraction of impacted tooth e.g. Wisdom tooth </td>
+					<td>Surgical extraction of impacted tooth e.g. Wisdom tooth</td>
 					<td>&euro;230.00 </td>
 				</tr>
 				<!-- ***** Fillings ***** -->
@@ -205,7 +189,7 @@
 				</tr>
 				<tr>
 					<td>Gum shield /sports guard</td>
-					<td>&euro;70.00 </td>
+					<td>&euro;80.00 </td>
 				</tr>
 				<!-- ***** RCT  ***** -->
 				<tr>
@@ -252,8 +236,8 @@
 				<!-- ***** Tooth Whitening ***** -->
 				<tr>
 					<td rowspan="1" valign="top">Tooth Whitening</td>
-					<td>Tray System (per tray) </td>
-					<td>&euro;75.00</td>
+					<td>Tray System</td>
+					<td>&euro;175.00</td>
 				</tr>
 				<!-- ***** Implants ***** -->
 				<tr>
@@ -281,15 +265,15 @@
 				<tr>
 					<td rowspan="11" valign="top">Crown and Bridge</td>
 					<td>Cap/Crown in "White" filling material </td>
-					<td>min &euro;120.00</td>
+					<td>min &euro;150.00</td>
 				</tr>
 				<tr>
 					<td>Crown/Bridge tooth per tooth - Porcelain (requires external laboratory work)</td>
-					<td>&euro;650.00 </td>
+					<td>&euro;700.00 </td>
 				</tr>
 				<tr>
 					<td>Crown/Bridge tooth per tooth - Porcelain bonded to metal (requires external laboratory work)</td>
-					<td>&euro;650.00 </td>
+					<td>&euro;700.00 </td>
 				</tr>
 				<tr>
 					<td>Crown/Bridge tooth per tooth - Gold (requires external laboratory work)</td>
